<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/welcome_to_alc_4_0_textview"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/about_ALC_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:text="@string/about_alc_button"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/my_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:text="@string/my_profile_Button"
        android:textColor="#ffffff" />


</LinearLayout>